Bug 116563 - GEN, KDE4: Find textbox can't get focus when find toolbar is undocked
Summary: GEN, KDE4: Find textbox can't get focus when find toolbar is undocked
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Katarina Behrens (Inactive)
URL:
Whiteboard: target:6.1.0 target:6.0.4
Keywords: bibisected, bisected, regression
: 116561 116656 (view as bug list)
Depends on:
Blocks: Find-Toolbar Floating-Menu
  Show dependency treegraph
 
Reported: 2018-03-22 12:10 UTC by Xisco Faulí
Modified: 2018-04-12 15:19 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-03-22 12:10:17 UTC
Steps to reproduce:
1. Open Writer
2. Ctrl + F
3. Undocked the find toolbar
4. Try to click on the find textbox in order to introduce some text

-> Find textbox doesn't get focus and nothing can be written

Reproduced in

Version: 6.1.0.0.alpha0+
Build ID: 234d0368c823eb1a74e973e051ac522e6b86e833
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 1 Xisco Faulí 2018-03-22 12:12:24 UTC
Regression introduced by:

author	Katarina Behrens <Katarina.Behrens@cib.de>	2017-11-07 15:09:42 +0100
committer	Thorsten Behrens <Thorsten.Behrens@CIB.de>	2017-11-10 10:45:49 +0100
commit bb6a8dce405bd0fcd551c217c05a503e559dbf4d (patch)
tree 7f495da1e16bee8ce3a631bc1218dc7cb3e1f59a
parent 992bc9dfe1687087918f5fe83d6166791533433b (diff)
tdf#48300 kde4+gen: bring forward the window with already opened doc
Send _NET_ACTIVE_WINDOW message to the mapped frame with the timestamp
of current X11 server time (the real timestamp, not CurrentTime
constant, otherwise e.g. KWin focus stealing prevention would kick in)

Bisected with: bibisect-linux64-6.0

Adding Cc: to Katarina Behrens
Comment 2 Xisco Faulí 2018-03-22 12:20:51 UTC
*** Bug 116561 has been marked as a duplicate of this bug. ***
Comment 3 Commit Notification 2018-03-28 12:38:50 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0db4e7f60c92313327ae5b1e4307ed4fedfaa6f5

tdf#116563: floating windows must get input focus at some point

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2018-04-05 12:44:49 UTC
*** Bug 116656 has been marked as a duplicate of this bug. ***
Comment 5 Xisco Faulí 2018-04-05 14:11:03 UTC
Verified in

Version: 6.1.0.0.alpha0+
Build ID: abf9ec7bef2c341ad9c914fd909dd03b4a784f18
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

I hope it lands in 6.0.4...

@Bubli, feel free to close it if your work here is done...
Comment 6 Katarina Behrens (Inactive) 2018-04-05 14:15:27 UTC
> @Bubli, feel free to close it if your work here is done...

Resolved fixed, but bwehehee, the work on this horrible code is never done
Comment 7 Commit Notification 2018-04-12 15:19:09 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a7e8fa20d8c1a529ef3cd7f69d3afa2e06412800&h=libreoffice-6-0

tdf#116563: floating windows must get input focus at some point

It will be available in 6.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.