tdf#116563: floating windows must get input focus at some point

This partially reverts commit bb6a8dce405bd0f and means we need
a different solution for tdf#48300 on X11-based Linux frontends.

Send _NET_ACTIVE_WINDOW signal only if we want to activate window
that has been minimized (ToTopFlags::RestoreWhenMin) or covered by
other windows (ToTopFlags::ForegroundTask).

Change-Id: I529baf6cc1174728b54bae4c658cf95631da19d6
Reviewed-on: https://gerrit.libreoffice.org/51867
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>